Dev title changes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>My Site</title>
 </head>
 <body>
+    <h2>Developer Start</h2>
     <h1>Hello Developer !!</h1>
+    <h2>Developer End</h2>
 </body>
 </html>
