comming stashed changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My Site</title>
 </head>
 <body>
-    <h1>master start</h1>
+    <h1>start</h1>
     <h1>Hello Developer !!</h1>
     <h2>Developer End</h2>
 </body>
